# luna-prefs

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.mk
doc/: Doxyfile
files/pkgconfig/: luna-prefs.pc.in
files/sysbus/: com.palm.preferences.json.prv.in  com.palm.preferences.service.prv.in
include/: lunaprefs.h
libluna-prefs/: CMakeLists.txt  Makefile  lunaprefs.c
libluna-prefs/files/pkgconfig/: luna-prefs.pc.in
luna-prefs-service/: CMakeLists.txt  Makefile  main.c
luna-prop/: CMakeLists.txt  Makefile  main.c
service/: com.palm.preferences.json.pub  com.palm.preferences.service.prv
